# DiplomaDB

./: .gitmodules  CMakeLists.txt  build.sh
src/: algo.cpp  algo.h  generators.cpp  generators.h  graph.cpp  graph.h  macro.h  main.cpp  sql.cpp  sql.h  utils.cpp  utils.h
